--- a/SuperMarket_Client/Views/Shared/_Layout.cshtml
+++ b/SuperMarket_Client/Views/Shared/_Layout.cshtml
@@ -18,8 +18,7 @@
 <link rel="stylesheet" href="~/Asset/css/style.css">
 
 <link rel="stylesheet" href="~/Asset/css/dashbord_navitaion.css">
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <!-- Responsive stylesheet -->
     <link rel="stylesheet" href="~/Asset/css/responsive.css">
 <!-- Title -->
@@ -29,12 +28,7 @@
     <link href="~/Asset/images/favicon.ico" sizes="128x128" rel="shortcut icon" type="image/x-icon" />
     <link href="~/Asset/images/favicon.ico" sizes="128x128" rel="shortcut icon" />
 
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+
 </head>
 
 
