--- a/SuperMarket_Client/Areas/Customer/Views/Cart/Checkout.cshtml
+++ b/SuperMarket_Client/Areas/Customer/Views/Cart/Checkout.cshtml
@@ -1,34 +1,30 @@
 ﻿@model SuperMarket_Models.ViewModels.ShoppingCartVM
+@using Microsoft.Extensions.Options
+@inject IOptions<SuperMarket_Utility.StripeSettings> Stripe
+
 
 <!-- Shop Checkouts Content -->
 <section class="shop-checkouts">
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 col-xl-9">
+            <div class="col-lg-7 col-xl-8">
                 <div class="checkout_form style2">
                     <h4 class="title mb40">Shipping Details</h4>
                     <div class="checkout_coupon ui_kit_button">
-                        <form class="form2" id="coupon_form" name="contact_form" action="#" method="post">
+                        <form class="form2" id="checkout_form" name="checkout_form" action="#" method="post">
                             <div class="row">
                                 <div class="col-sm-12">
                                     <div class="form-group">
-                                        <label class="form-label">Full name</label>
-                                        <input class="form-control form_control" type="text" asp-for="Order.Name">
+                                        <label class="form-label">Full name *</label>
+                                        <input class="form-control form_control" style="padding-left:10px;" type="text" asp-for="Order.Name" required>
                                     </div>
                                 </div>
                                 <div class="col-lg-12">
                                     <div class="form-group">
                                         <label class="form-label">Country / Region *</label>
                                         <div class="checkout_country_form actegory">
-                                            <select class="custom_select_dd" id="selectbox_alCategory2">
-                                                <option>Country</option>
-                                                <option value="Turkey">Turkey</option>
-                                                <option value="United Kingdom">United Kingdom</option>
-                                                <option value="United States">United States</option>
-                                                <option value="Ukraine">Ukraine</option>
-                                                <option value="Uruguay">Uruguay</option>
-                                                <option value="UK">UK</option>
-                                                <option value="Uzbekistan">Uzbekistan</option>
+                                            <select asp-for="Order.Country" class="custom_select_dd" id="selectbox_alCategory2" required>
+                                                <option selected value="Vietnam">Viet Nam</option>
                                             </select>
                                         </div>
                                     </div>
@@ -36,28 +32,28 @@
                                 <div class="col-sm-12">
                                     <div class="form-group">
                                         <label class="form-label">Street address *</label>
-                                        <input asp-for="Order.Address" class="form-control form_control mb10" type="text">
+                                        <input asp-for="Order.Address" style="padding-left:10px;" class="form-control form_control mb10" type="text" required>
                                     </div>
                                 </div>
                                 <div class="col-sm-12">
                                     <div class="form-group">
                                         <label class="form-label">Town / City *</label>
-                                        <input class="form-control form_control" type="number"asp-for="Order.City">
+                                        <input class="form-control form_control" style="padding-left:10px;" type="text" asp-for="Order.City" required>
                                     </div>
                                 </div>
                                 <div class="col-sm-12">
                                     <div class="form-group">
                                         <label class="form-label">Phone *</label>
-                                        <input name="form_phone" class="form-control form_control" type="number" asp-for="Order.Phone">
+                                        <input  style="padding-left:10px;" class="form-control form_control" type="text" asp-for="Order.Phone" required>
                                     </div>
                                 </div>
-                            
+
                                 <div class="col-sm-12">
                                 </div>
                                 <div class="col-sm-12">
                                     <div class="form-group mb0">
                                         <label class="ai_title">Order notes (optional)</label>
-                                        <textarea name="form_message" class="form-control" rows="12" placeholder=""></textarea>
+                                        <textarea name="form_message" style="padding-left:10px;"  class="form-control" rows="12" placeholder=""></textarea>
                                     </div>
                                 </div>
                             </div>
@@ -65,7 +61,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-xl-3">
+            <div class="col-lg-5 col-xl-4">
                 <div class="order_sidebar_widget mb30">
                     <h4 class="title">Your Order</h4>
                     <ul>
@@ -78,22 +74,10 @@
                         <li>
                             <div class="ui_kit_radiobox shopping_cart_radio_box">
                                 <div class="radio">
-                                    <input id="radio_one" name="radio" type="radio" checked="">
-                                    <label for="radio_one"><span class="car_for_shipping">Shipping</span><span class="radio-label"></span>Flat rate: <span class="fwb text-thm">$20.00</span></label>
+                                    <label for="radio_one"><span class="car_for_shipping">Shipping</span></label>
                                 </div>
-                                <div class="radio">
-                                    <input id="radio_two" name="radio" type="radio">
-                                    <label for="radio_two"><span class="radio-label"></span>Free shipping</label>
-                                </div>
-                                <div class="radio">
-                                    <input id="radio_three" name="radio" type="radio">
-                                    <label for="radio_three"><span class="radio-label"></span>Local pickup: <span class="fwb text-thm">$25.00</span></label>
-                                </div>
-                                <div class="radio">
-                                    <label for="radio_four"><span class="radio-label"></span> Shipping to AL.</label>
-                                </div>
-                                <div class="radio">
-                                    <label for="radio_four"><span class="radio-label"></span> <span class="fz14 fwb tdu text-thm">Change address</span></label>
+                                <div class="radio" >
+                                    <label for="radio_two" style="padding-right:0;">Free shipping</label>
                                 </div>
                             </div>
                         </li>
@@ -103,23 +87,12 @@
                     </ul>
                     <div class="ui_kit_radiobox checkout">
                         <div class="radio">
-                            <input id="radio_five" name="radio" type="radio" checked="">
-                            <label for="radio_five"><span class="radio-label"></span> Direct bank transfer</label>
-                        </div>
-                        <div class="bt_details">
-                            <p>Make your payment directly into our bank account. Please use your Order ID as the payment reference.Your order will not be shipped until the funds have.</p>
-                        </div>
-                        <div class="radio">
-                            <input id="radio_six" name="radio" type="radio">
-                            <label for="radio_six"><span class="radio-label"></span> Cash on delivery</label>
-                        </div>
-                        <div class="radio">
-                            <input id="radio_seven" name="radio" type="radio">
-                            <label for="radio_seven"><span class="radio-label"></span> PayPal What is PayPal? <img src="images/resource/payment.png" alt="payment.png"></label>
+                            <input id="radio_seven" name="radio" type="radio" checked>
+                            <label for="radio_seven"><span class="radio-label"></span> PayPal What is PayPal? <img src="/Asset/images//resource//payment.png" alt="payment.png"></label>
                         </div>
                     </div>
                     <div class="ui_kit_button payment_widget_btn">
-                        <button type="button" class="btn btn-thm btn-block">PLACE ORDER</button>
+                        <button type="submit" form="checkout_form" class="btn btn-thm btn-block">PLACE ORDER</button>
                     </div>
                 </div>
             </div>
