Done Cart on Layout - ViewComponents

--- a/SuperMarket_Client/Areas/Customer/Views/Cart/Index.cshtml
+++ b/SuperMarket_Client/Areas/Customer/Views/Cart/Index.cshtml
@@ -22,7 +22,7 @@
                                             <tbody class="table_body">
                                                 @foreach (var item in Model.ListCart)
                                                 {
-                                                    <tr>
+                                                    <tr class="trForRemove_@item.CartId">
                                                         <th scope="row">
                                                             <ul class="cart_list">
                                                                 <li class="list-inline-item" style="height:56px;line-height:56px;" ><a class="close_img" href="#"><img src="images/shop/close.png" alt=""></a></li>
