--- a/SuperMarket_Client/Areas/Admin/Views/Brand/CreateBrand.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Brand/CreateBrand.cshtml
@@ -11,7 +11,7 @@
 <div class="row">
 	<div class="col-md-6">
 		<p>@ViewBag.msg</p>
-		<form id="profile-form" method="post" asp-action="CreateBrand">
+		<form id="profile-form" method="post" asp-action="CreateBrand" onsubmit="return confirm('Are you sure to Create?')">
 			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 			<input asp-for="BrandId" type="hidden" />
 			<div class="form-floating">
@@ -39,7 +39,7 @@
 				<select class="form-control selectpicker" name="CategoryId" asp-items="@ViewBag.categoryList" multiple data-live-search="true">
 				</select>
 			</div>
-			<button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Create</button>
+			<button id="update-profile-button" type="submit" onclick="return ValidateForm()" class="w-100 btn btn-lg btn-primary">Create</button>
 		</form>
 	</div>
 </div>
@@ -47,7 +47,4 @@
 @section Scripts {
 	<partial name="_ValidationScriptsPartial" />
 }
-<script>
-	$('select').selectpicker();
-</script>
 
