--- a/SuperMarket_Client/Areas/Admin/Views/Brand/UpdateBrand.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Brand/UpdateBrand.cshtml
@@ -11,7 +11,7 @@
 <div class="row">
 	<div class="col-md-6">
 		<p>@ViewBag.msg</p>
-		<form id="profile-form" method="post" asp-action="UpdateBrand">
+		<form id="profile-form" method="post" asp-action="UpdateBrand" onsubmit="return confirm('Are you sure to Update?')">
 			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 			<input asp-for="BrandId" type="hidden" />
 			<div class="form-floating">
