--- a/SuperMarket_Client/Areas/Admin/Views/Category/UpdateCategory.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Category/UpdateCategory.cshtml
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="col-md-6">
         <p>@ViewBag.msg</p>
-        <form id="profile-form" method="post" asp-action="UpdateCategory">
+        <form id="profile-form" method="post" asp-action="UpdateCategory" onsubmit="return confirm('Are you sure to Update?')">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input asp-for="CategoryId" type="hidden"/>
             <div class="form-floating">
