--- a/SuperMarket_Client/Views/Shared/_Layout.cshtml
+++ b/SuperMarket_Client/Views/Shared/_Layout.cshtml
@@ -532,8 +532,8 @@
   </header>
   
   <!-- Main Header Nav For Mobile -->
-  <div id="page" class="stylehome1 h0">
-    <div class="mobile-menu">
+  @*<div id="page" class="stylehome1 h0">*@
+   @* <div class="mobile-menu">
       <div class="header stylehome1">
         <div class="mobile_menu_bar">
           <a class="menubar" href="#menu"><span></span></a>
@@ -578,9 +578,9 @@
           </ul>
         </div>
       </div>
-    </div>
+    </div>*@
     <!-- /.mobile-menu -->
-    <nav id="menu" class="stylehome1">
+   @* <nav id="menu" class="stylehome1">
       <ul>
         <li><span>Home</span>
           <ul>
@@ -671,25 +671,10 @@
         </li>
         <li><a href="page-contact.html">Contact</a></li>
         <!-- Only for Mobile View -->
-        <li class="mm-add-listing">
-          <span class="border-none">
-            <span class="contact-info">
-              <span class="phone-num"><i class="fas fa-phone"></i> <a href="#">Call us <span class="text-thm">123 456</span></a></span>
-              <span class="address">Collins Street West, Victoria <br>8007, Australia.</span><br><br>
-              <a href="#" class="shop_btn thm style2">SHOP NOW</a><br><br>
-            </span>
-            <span class="social-links">
-              <a href="#"><span class="fab fa-facebook-f"></span></a>
-              <a href="#"><span class="fab fa-twitter"></span></a>
-              <a href="#"><span class="fab fa-instagram"></span></a>
-              <a href="#"><span class="fab fa-youtube"></span></a>
-              <a href="#"><span class="fab fa-pinterest"></span></a>
-            </span>
-          </span>
-        </li>
+     
       </ul>
-    </nav>
-  </div>
+    </nav>*@
+  @*</div>*@
 
   <!-- ==================================================================================================================== -->
     <section class="container">
