--- a/SuperMarket_Client/Areas/Customer/Views/Product/CompareProduct.cshtml
+++ b/SuperMarket_Client/Areas/Customer/Views/Product/CompareProduct.cshtml
@@ -1,52 +1,86 @@
-﻿@model SuperMarket_Models.ViewModels.ProductVM
+﻿<ul class="listproduct pro-compare pro-compare_main"><li data-id="201134" data-issetup="1" data-maingroup="305" data-subgroup="1097" data-type="1" data-vehicle="2" data-productcode="3051097001635" class="productid-201134 cate-1943" data-url="/tu-lanh/samsung-rs62r5001b4-sv">
+                <a href="/tu-lanh/samsung-rs62r5001b4-sv" data-s="Nomal" data-site="2" data-pro="3" data-cache="True" data-sv="webdmx-26-94" data-name="Tủ lạnh Samsung Inverter 655 lít RS62R5001B4/SV" data-id="201134" data-price="22400000.0" data-brand="Samsung" data-cate="Tủ lạnh" data-box="BoxCate" class="main-contain">
+
+        <div class="item-label"> 
+                    <span class="lb-tragop">Trả góp 0%</span>
+        </div>
+            <div class="item-img item-img_1943">
+                <img class="thumb ls-is-cached lazyloaded" data-src="https://cdn.tgdd.vn/Products/Images/1943/201134/samsung-rs62r5001b4-sv-19-300x300.jpg" alt="Samsung Inverter 655 lít RS62R5001B4/SV" src="https://cdn.tgdd.vn/Products/Images/1943/201134/samsung-rs62r5001b4-sv-19-300x300.jpg">
+            </div>
 
 
+        <h3>
+            Samsung Inverter 655 lít RS62R5001B4/SV
+        </h3>
+            <p class="item-txt-online">Online giá rẻ</p>
+                <div class="box-p">
+                    <p class="price-old black">25.090.000₫</p>
+                        <span class="percent">-10%</span>
+                </div>
+                <strong class="price">22.400.000₫</strong>
+                <div class="item-rating">
+            <p>
+                        <i class="icon-star"></i>
+                        <i class="icon-star"></i>
+                        <i class="icon-star"></i>
+                        <i class="icon-star"></i>
+                                <i class="icon-star-dark"></i>
+            </p>
+            <p class="item-rating-total">66</p>
+        </div>
 
-<div class="container" >
-
-    <div>
-        <select>
-            <option>category</option>
-            <option>sasd</option>
-        </select>
-        @*MODAL*@
-        <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#product1">
-  Launch demo modal1
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="#product1" tabindex="-1" aria-labelledby="#product1Label" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="#product1Label">Modal title</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        product 1
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-    </div>
-    <div class="d-flex justify-content-center p-2 flex-row">
-    <div  style="background-color:red;" class="col-md-4">
-        ss
+    </a>
+    <div class="item-bottom">
+        <a href="#" class="shiping"></a>
     </div>
 
-    <div style="background-color:blue;" class="col-md-4">
-     d
-    </div>
- <div style="background-color:green;" class="col-md-4">
-  dg
+
+                <a href="javascript:;" class="deleteProduct" onclick="DeletedProduct(201134)"><i class="icon-deletess"></i></a>
+        </li>
+        <li data-id="237042" data-issetup="1" data-maingroup="305" data-subgroup="1097" data-type="1" data-vehicle="2" data-productcode="3051097001888" class="productid-237042 cate-1943" data-url="/tu-lanh/electrolux-etb3440k-h">
+                <a href="/tu-lanh/electrolux-etb3440k-h" data-s="Nomal" data-site="2" data-pro="3" data-cache="True" data-sv="webdmx-26-94" data-name="Tủ lạnh Electrolux Inverter 312 lít ETB3440K-H" data-id="237042" data-price="11090000.0" data-brand="Electrolux" data-cate="Tủ lạnh" data-box="BoxCate" class="main-contain">
+
+        <div class="item-label"> 
+                    <span class="lb-tragop">Trả góp 0%</span>
+        </div>
+            <div class="item-img item-img_1943">
+                <img class="thumb ls-is-cached lazyloaded" data-src="https://cdn.tgdd.vn/Products/Images/1943/237042/electrolux-etb3440k-h-300x300.jpg" alt="Electrolux Inverter 312 lít ETB3440K-H" src="https://cdn.tgdd.vn/Products/Images/1943/237042/electrolux-etb3440k-h-300x300.jpg">
+            </div>
+
+<p class="result-label temp1"><img width="20" height="20" class="lazyload" alt="Giảm sốc" data-src="https://cdn.tgdd.vn/2020/10/content/icon1-50x50.png"><span>Giảm sốc</span></p>
+        <h3>
+            Electrolux Inverter 312 lít ETB3440K-H
+        </h3>
+                <div class="box-p">
+                    <p class="price-old black">13.890.000₫</p>
+                        <span class="percent">-20%</span>
+                </div>
+                <strong class="price">11.090.000₫</strong>
+                <div class="item-rating">
+            <p>
+                        <i class="icon-star"></i>
+                        <i class="icon-star"></i>
+                        <i class="icon-star"></i>
+                                <i class="icon-star-half"></i>
+                            <i class="icon-star-dark"></i>
+            </p>
+            <p class="item-rating-total">5</p>
+        </div>
+
+    </a>
+    <div class="item-bottom">
+        <a href="#" class="shiping"></a>
     </div>
 
-    </div>
 
-</div>
+                <a href="javascript:;" class="deleteProduct" onclick="DeletedProduct(237042)"><i class="icon-deletess"></i></a>
+        </li>
+        <li class="productid-0" style="">
+            <div class="addsp-cp" onclick="OpenPopup(this)">
+                <div class="plus">
+                    <i></i>
+                    <i></i>
+                </div>
+                <span>Thêm sản phẩm so sánh</span>
+            </div>
+        </li></ul>
