--- a/SuperMarket_Client/Areas/Admin/Views/Brand_Category/Brand_CategoryManage.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Brand_Category/Brand_CategoryManage.cshtml
@@ -4,40 +4,39 @@
 }
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-<div class="accordion accordion-flush-danger" id="accordionFlushExample">
-	<div class="accordion-item">
-		@foreach (Category item in @ViewBag.CategoryList)
-		{
+
+@foreach (Category item in @ViewBag.CategoryList)
+{
+	<div class="accordion accordion-flush" id="accordionFlushExample">
+		<div class="accordion-item">
 			<h2 class="accordion-header" id="flush-headingOne">
 				<button class="accordion-button collapsed " style="background: linear-gradient(#e66465, #9198e5);" type="button" data-bs-toggle="collapse" data-bs-target="#item_@item.CategoryId" aria-expanded="false" aria-controls="flush-collapseOne">
 					@item.CategoryName
 				</button>
 			</h2>
-			foreach (var data in Model)
+			@foreach (var data in Model)
 			{
 				if (item.CategoryId == data.Category.CategoryId)
 				{
 					<div id="item_@item.CategoryId" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
 						<div class="accordion-body">@data.Brand.BrandName</div>
 						<button class="btn btn-outline-success" type="button" data-bs-toggle="collapse" data-bs-target="#item_BC_@data.BrandCateId" aria-expanded="false" aria-controls="collapseExample">
-							Show all product of the Brand
+							Product of the Brand
 						</button>
 						@foreach (Product product in @ViewBag.product)
 						{
-							if (product.BrandCateId==data.BrandCateId)
+							if (product.BrandCateId == data.BrandCateId)
 							{
-								<div class="collapse" id="item_BC_@data.BrandCateId">
-									<div class="card card-body"style="background-color:gray">
+								<div class="collapse pt-2" id="item_BC_@data.BrandCateId">
+									<div class="card card-body" style="background-color:gray">
 										@product.ProductName
 									</div>
 								</div>
 							}
-
 						}
-
 					</div>
 				}
 			}
-		}
+		</div>
 	</div>
-</div>
+}
